--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "themes/academic"]
 	path = themes/academic
 	url = https://github.com/gcushen/hugo-academic.git
+[submodule "guangyancai.github.io"]
+	path = guangyancai.github.io
+	url = https://github.com/GuangyanCai/guangyancai.github.io.git
+	branch = master
